--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,8 @@ jobs:
           name: Front-end Scan
           command: |
             cd frontend
-            npm install       
+            npm install    
+            npm audit fix --force --audit-level=critical   
             npm audit --audit-level=critical
   scan-backend:
     docker:
@@ -90,7 +91,8 @@ jobs:
           name: Back-end Scan
           command: |
             cd backend
-            npm install          
+            npm install   
+            npm audit fix --force --audit-level=critical       
             npm audit --audit-level=critical              
 
   
