--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix 
+            npm audit fix --force
             npm audit 
   scan-backend:
     docker:
@@ -92,7 +92,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix             
+            npm audit fix --force          
             npm audit          
 
          
