--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,15 +71,16 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
-     - restore_cache:
-         keys: [frontend-deps]
+      - restore_cache:
+          keys: [frontend-deps]
       - run:
           name: Front-end Scan
           command: |
             cd frontend
-            npm install         
+            npm install
+            npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
-            npm audit fix --audit-level=critical --force
+            
   scan-backend:
     docker:
       - image: cimg/node:13.8.0
@@ -88,13 +89,12 @@ jobs:
       - restore_cache:
           keys: [backend-deps]
       - run:
-         name: Back-end Scan
+          name: Back-end Scan
           command: |
             cd backend
-            npm install                    
-            npm audit --audit-level=critical    
-            npm audit fix --audit-level=critical --force 
-            npm audit fix --audit-level=critical --force  
+            npm install
+            npm audit fix --force --audit-level=critical            
+            npm audit --audit-level=critical 
 
          
 
