--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -32,8 +32,8 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacity
-      ImageId: ami-0c4f7023847b90238
+      KeyName: mykey
+      ImageId: ami-0557a15b87f6559cf
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
