--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,20 +222,31 @@ jobs:
     steps:
       - checkout
       - install_awscli
+      - run: 
+          name: migration
+          command: |
+            cd ./backend
+            npm install
       - run:
           name: Run migrations
           command: |
-            cd backend
-            npm install
-            npm audit fix
-            npm run migrations > migrations_dump.txt
+            cd ./backend 
+            touch migrationStatus.txt
+            npm run migrations >> migrationStatus.txt
+
       - run:
-          name: Send migration status to kvdb.io
+          name: Send migration results to memstash
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            if grep -q "has been executed successfully." ./backend/migrationStatus.txt
             then
-              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            fi
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" \
+            --request PUT \
+            --data "1" https://api.memstash.io/values/migration_status_${CIRCLE_WORKFLOW_ID}
+            else
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" \
+            --request PUT \
+            --data "0" https://api.memstash.io/values/migration_status_${CIRCLE_WORKFLOW_ID}
+            fi      
       - destroy-environment
       - revert-migrations   
 
