--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,18 +236,12 @@ jobs:
             
 
       - run:
-          name: Send migration results to memstash
+          name: Send migration status to kvdb.io
           command: |
-            if grep -q "has been executed successfully." ./backend/migrationStatus.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" \
-            --request PUT \
-            --data "1" https://api.memstash.io/values/migration_status_${CIRCLE_WORKFLOW_ID}
-            else
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" \
-            --request PUT \
-            --data "0" https://api.memstash.io/values/migration_status_${CIRCLE_WORKFLOW_ID}
-            fi      
+              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
       - destroy-environment
       - revert-migrations   
 
