--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,8 +141,8 @@ jobs:
           command: |
             cd frontend
             npm install
-           #  npm audit fix --force --audit-level=critical
-           # npm audit --audit-level=critical
+            npm audit fix --force --audit-level=critical
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -156,8 +156,8 @@ jobs:
           command: |
             cd backend
             npm install
-          #  npm audit fix --force --audit-level=critical            
-          #  npm audit --audit-level=critical 
+            npm audit fix --force --audit-level=critical            
+            npm audit --audit-level=critical 
 
   deploy-infrastructure:
     docker:
